styles/widgets/common/textEditor.less
.dx-texteditor {
    display: block;

    input::-ms-clear {
        display: none;
    }
}

/*B231111*/
.dx-placeholder {
    position: absolute;
    top: 0px;
    left: 0px;
    max-width: 100%;
    width: auto;
    height: 100%;
    text-align: left;
    cursor: text;
    pointer-events: none;

    &:before {
        display: inline-block;
        vertical-align: middle;
        overflow: hidden;
        content: e("attr(DATA-DX_PLACEHOLDER)");
        pointer-events: none;
        white-space: nowrap;
    }
    &:after {
        content: ' ';
        display: inline-block;
        height: 100%;
        vertical-align: middle;
    }
}

.dx-texteditor-container {
    position: relative;
    overflow: hidden;
    width: 100%;
    height: 100%;
}

.dx-texteditor-buttons-container {
    position: absolute;
    top: 0;
    right: 0;
    width: auto;
    height: 100%;
}

.dx-texteditor-input {
    -webkit-appearance: none;
    width: 100%;
    height: 100%;
    outline: 0;
    border: 0;
    .user-select(text);
}

.dx-show-clear-button {
    position: relative;
}

.dx-clear-button-area {
    float: right;
    height: 100%;
    width: 34px;
    position: relative;
    cursor: pointer;

    .dx-icon-clear {
        position: absolute;
        display: inline-block;
        .background-size-prop(contain);
    }
}

.dx-texteditor-empty .dx-clear-button-area {
    display: none;
}

.dx-state-disabled {
    .dx-placeholder {
        cursor: auto;
    }

    .dx-clear-button-area {
        display: none;
    }

    .dx-texteditor-input {
        opacity: 1;
    }
}

.dx-rtl .dx-texteditor,
.dx-rtl.dx-texteditor {
    .dx-placeholder {
        text-align: right;
        left: auto;
        right: 0;
    }

    .dx-clear-button-area {
        float: left;
        right: auto;
        left: 0;
    }

    .dx-texteditor-buttons-container {
        left: 0;
        right: auto;
    }
}

.dx-device-android {
    .dx-texteditor-input {
        -webkit-user-modify: read-write-plaintext-only;
    }
}

